# slice-of-life

./: .gitignore  .pre-commit-config.yaml  README.md  extractAudioFromVideo.py  pyproject.toml
slice_of_life/: slice_of_life.py
slice_of_life/audio/: audio_file.py  audio_handler.py
slice_of_life/utils/: args.py
slice_of_life/video/: video_file.py  video_handler.py
